If applied, this commit will fix the syntax error for the media query in Contact.
- the "." made our website did not cover the CSS for the Message <p>. So, we can see the size difference.

--- a/src/sections/Contact/ContactStyles.module.css
+++ b/src/sections/Contact/ContactStyles.module.css
@@ -59,7 +59,7 @@ input[type='submit']:active {
 }
 
 @media (width >= 800px) {
-    .textarea, 
+    textarea, 
     input:not([type='submit']) {
         width: 600px;
         font-size: 20px;
@@ -70,7 +70,7 @@ input[type='submit']:active {
 }
 
 @media (width >= 1400px) {
-    .textarea, 
+    textarea, 
     input:not([type='submit']) {
         width: 800px;
     }
